# OptMini

./: README.md  Table-1.csv  Table-2.xlsx
.github/workflows/: main.yml
ILP/: gurobi.json  main.py
ILP/scripts/: ilp.py  load_gm_order.py  lower_bound.py  scripts.py  vis.py
code/: CMakeLists.txt  Minimizers.cpp  common_structures.cpp  common_structures.h  config.h  density_and_gc.cpp  density_and_gc.h  dfs.cpp  dfs.h  dp.cpp  dp.h  functions.cpp  functions.h  old_code.cpp  preprocess_particular.cpp  preprocess_particular.h  random_dens.cpp  random_dens.h  results_manager.cpp  results_manager.h  swapper.cpp  swapper.h  tools.cpp  tools.h  uhs.cpp  uhs.h  window_types_manager.cpp  window_types_manager.h
scripts/: average_density_dfs.ipynb  calc_density.ipynb  dna.csv  encode_opt_order.ipynb  k_6.csv  k_leq_5.csv  plots.ipynb  runtime_k6.csv
